--- a/simpleGestureSwift/Base.lproj/Main.storyboard
+++ b/simpleGestureSwift/Base.lproj/Main.storyboard
@@ -1,26 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="simpleGestureSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sgp-0R-eej" userLabel="Segmented Control">
+                                <rect key="frame" x="40" y="289" width="240" height="29"/>
+                                <segments>
+                                    <segment title="Enable left swipe"/>
+                                    <segment title="Disable left swipe"/>
+                                </segments>
+                            </segmentedControl>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OVD-Mz-YhQ">
+                                <rect key="frame" x="40" y="93" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="sgp-0R-eej" secondAttribute="trailing" constant="24" id="7a9-kb-mSh"/>
+                            <constraint firstItem="sgp-0R-eej" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="24" id="FFC-bD-mna"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sgp-0R-eej" secondAttribute="bottom" constant="251" id="M5V-55-Np0"/>
+                            <constraint firstItem="OVD-Mz-YhQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="73" id="aHa-Gl-XGR"/>
+                            <constraint firstItem="OVD-Mz-YhQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="24" id="bcc-bm-HLH"/>
+                            <constraint firstItem="sgp-0R-eej" firstAttribute="top" secondItem="OVD-Mz-YhQ" secondAttribute="bottom" constant="68" id="eEO-hk-piY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="OVD-Mz-YhQ" secondAttribute="trailing" constant="24" id="fx5-6Y-y3D"/>
+                            <constraint firstItem="sgp-0R-eej" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="269" id="rag-9R-jf0"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="opl-hG-TXf" appends="YES" id="hy7-e7-aYz"/>
+                            <outletCollection property="gestureRecognizers" destination="Hiq-N8-NNJ" appends="YES" id="z7z-D5-3n8"/>
+                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="opl-hG-TXf"/>
+                <swipeGestureRecognizer direction="right" id="Hiq-N8-NNJ" userLabel="Left Swipe Gesture Recognizer"/>
+                <swipeGestureRecognizer direction="right" id="wPv-wx-PBO">
+                    <string key="userLabel" base64-UTF8="YES">
+EFJpZ2h0IFN3aXBlIEdlc3R1cmUgUmVjb2duaXplcg
+</string>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="right" id="5HQ-60-nZ2" userLabel="Rotation Swipe Gesture Recognizer"/>
             </objects>
+            <point key="canvasLocation" x="118.125" y="123.59154929577466"/>
         </scene>
     </scenes>
 </document>
